[gd_scene load_steps=4 format=3 uid="uid://c4y7i74bkalcf"]

[ext_resource type="Script" uid="uid://bmpt3gunruw5j" path="res://Scripts/game_over.gd" id="1_game_over"]
[ext_resource type="Shader" uid="uid://coih1bijcca7x" path="res://Assets/Shader/game_over.gdshader" id="2_lwxdm"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mjsgh"]
shader = ExtResource("2_lwxdm")

[node name="GameOver" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_game_over")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_mjsgh")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -206.5
offset_top = -204.5
offset_right = 206.5
offset_bottom = 204.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 30
alignment = 1

[node name="GameOverLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 72
text = "GAME OVER"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 36
text = "Score: 0"
horizontal_alignment = 1

[node name="CoinLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 36
text = "Coins Collected: 0"
horizontal_alignment = 1

[node name="RetryButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "RETRY"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "MAIN MENU"

[connection signal="pressed" from="VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="resized" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_resized"]
